Fix alignwide and alignfull styles, style featured images, improve Gutenberg styles.

--- a/assets/dev/sass/content/primary/_posts-and-pages.scss
+++ b/assets/dev/sass/content/primary/_posts-and-pages.scss
@@ -17,6 +17,10 @@
 	}
 }
 
+.entry-meta {
+	margin-bottom: $spacing_vertical;
+}
+
 .updated:not(.published) {
 	display: none;
 }
@@ -24,4 +28,8 @@
 .page-links {
 	clear: both;
 	margin: 0 0 $spacing_vertical;
+}
+
+.wp-post-image {
+	@include center-block();
 }
