--- a/assets/dev/sass/elements/_elements.scss
+++ b/assets/dev/sass/elements/_elements.scss
@@ -24,10 +24,9 @@ q {
 }
 
 hr {
-	background-color: $color__background-hr;
+	margin: $spacing_vertical auto;
 	border: 0;
-	height: 1px;
-	margin-bottom: 1.5em;
+	border-bottom: 2px solid $color__border-separator;
 }
 
 @import "lists";
